<resources>
    <string name="app_name">CrexInfo</string>
    <string name="commentary_fragment_title">Commentary</string>
    <string name="commentary_fragment_subtitle">Commentary Fragment</string>
    <string name="history_fragment_title">History</string>
    <string name="history_fragment_subtitle">History Fragment</string>
    <string name="info_fragment_title">Info</string>
    <string name="live_fragment_title">Live</string>
    <string name="live_fragment_subtitle">Live Fragment</string>
    <string name="scorecard_fragment_title">Scorecard</string>
    <string name="scorecard_fragment_subtitle">Scorecard Fragment</string>
    <string name="right_arrow">&gt;</string>
    <string name="see_more_matches">See more matches</string>
    <string name="fixtures">Fixtures &gt;</string>
    <string name="team_comparison">Team Comparison</string>
    <string name="last_10_matches">(Last 10 matches)</string>
    <string name="overall">Overall</string>
    <string name="on_venue">On Venue</string>
    <string name="vs_all_teams">vs all teams</string>
    <string name="win_percentage">%d%%</string>
    <string name="matches_played">Matches Played</string>
    <string name="win">Win</string>
    <string name="avg_score">Avg Score</string>
    <string name="highest_score">Highest Score</string>
    <string name="lowest_score">Lowest Score</string>
</resources>